objects/Bureau_Item_Master__c.object
<CustomObject>
    <description>This object represents an Item such as Instrument, Report or Service.</description>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>France - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online Admin</fullName>
                </value>
                <value>
                    <fullName>S2P Solutions</fullName>
                </value>
                <value>
                    <fullName>Online Reports</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (a – d)</fullName>
                </value>
                <value>
                    <fullName>Gradu8</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (d – f)</fullName>
                </value>
                <value>
                    <fullName>Online - PJM/WPS/JCF/OCP</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (g – j)</fullName>
                </value>
                <value>
                    <fullName>Offline Scoring</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (k – n)</fullName>
                </value>
                <value>
                    <fullName>360 Services</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (o – r)</fullName>
                </value>
                <value>
                    <fullName>Offline Reports</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (s – v)</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>S2P Tests (w – z)</fullName>
                </value>
                <value>
                    <fullName>Offline - PJM/WPS/JCF/OCP</fullName>
                </value>
                <value>
                    <fullName>Previsor Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IM_Code__c</fullName>
        <label>IM Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English (International)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Belgian Dutch</fullName>
                </value>
                <value>
                    <fullName>Belgian French</fullName>
                </value>
                <value>
                    <fullName>Br. Portug.</fullName>
                </value>
                <value>
                    <fullName>Can. French</fullName>
                </value>
                <value>
                    <fullName>Chinese-sim</fullName>
                </value>
                <value>
                    <fullName>Chinese-trad</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>LA Spanish</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <description>This field represents the Systems for which this Item is available</description>
        <inlineHelpText>This Item is available for these systems</inlineHelpText>
        <label>System Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SODA</fullName>
                </value>
                <value>
                    <fullName>DSPS</fullName>
                </value>
                <value>
                    <fullName>MFS UCF</fullName>
                </value>
                <value>
                    <fullName>Nacho</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>S2P</fullName>
                </value>
                <value>
                    <fullName>BrainBench</fullName>
                </value>
                <value>
                    <fullName>Kwiz</fullName>
                </value>
                <value>
                    <fullName>MFS PMC</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>Career Guidance</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>JCF Creator</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Toolbox - MTB</fullName>
                </value>
                <value>
                    <fullName>Online Competency Profiler</fullName>
                </value>
                <value>
                    <fullName>PC Expert</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>TalentCentral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>BU__c</columns>
        <columns>NAME</columns>
        <columns>IM_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Managed Services Item Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <recordTypes>
        <fullName>Instrument</fullName>
        <active>true</active>
        <description>This record type defines the Bureau Item as an Instrument</description>
        <label>Instrument</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report</fullName>
        <active>true</active>
        <description>This record type defines the Bureau Item as a Report</description>
        <label>Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <description>This record type defines the Bureau Item as a Service</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>